# SimRobot

./: .gitignore  LICENSE  README.md
Docs/: scene-description.md  third-party-libraries.md
Make/CMake/: Benchmark.cmake  Box2D.cmake  CMakeLists.txt  Eigen.cmake  Factory.cmake  MuJoCo.cmake  ODE.cmake  Qt6.cmake  SimRobot.cmake  SimRobotCore2.cmake  SimRobotCore2D.cmake  SimRobotCore3.cmake  SimRobotEditor.cmake  SimpleVehicle.cmake  Soccer.cmake
Make/Common/: Box2D.cmake  CMakeLists.txt  Eigen.cmake  Factory.cmake  OpenGL.cmake  Qt5.cmake  SimRobot.cmake  SimRobotCommon.cmake  SimRobotCore2.cmake  SimRobotCore2D.cmake  SimRobotEditor.cmake  SimpleVehicle.cmake
Make/Linux/: Makefile  compile  generate
Make/VS2019/: generate.cmd
Make/VS2022/: generate.cmd
Make/Windows/: generate.cmd
Make/macOS/: Info.plist  generate  pbxgen  pbxgen.cfg
Scenes/: Benchmark.ros2  Factory.ros2  Factory.ros3  SimpleVehicle.ros2  SimpleVehicle.ros3  Soccer.ros2d
Src/Controllers/: BenchmarkController.cpp  FactoryController.cpp  SimpleVehicleController.cpp  SoccerController.cpp
Src/SimRobot/: AppleHelper.h  AppleHelper.mm  Main.cpp  MainWindow.cpp  MainWindow.h  RegisteredDockWidget.cpp  RegisteredDockWidget.h  SceneGraphDockWidget.cpp  SceneGraphDockWidget.h  SimRobot.h  SimRobot.qrc  StatusBar.cpp  StatusBar.h  Theme.cpp  Theme.h
Src/SimRobot/Icons/: SimRobot.icns  SimRobotDoc.icns
Src/SimRobotCommon/Parser/: Element.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
Src/SimRobotCommon/Platform/: Assert.cpp  Assert.h  System.cpp  System.h
Src/SimRobotCommon/Tools/: Math.h
Src/SimRobotCommon/Tools/Math/: Rotation.h  RotationMatrix.cpp  RotationMatrix.h
Src/SimRobotCore2/: ActuatorsWidget.cpp  ActuatorsWidget.h  CoreModule.cpp  CoreModule.h  SensorWidget.cpp  SensorWidget.h  SimObjectRenderer.cpp  SimObjectRenderer.h  SimObjectWidget.cpp  SimObjectWidget.h  SimRobotCore2.h  SimRobotCore2.qrc
Src/SimRobotCore2/Graphics/: GraphicsContext.cpp  GraphicsContext.h  Light.cpp  Light.h  OpenGL.h  Primitives.h
Src/SimRobotCore2/Graphics/OpenGL/: GraphicsContext.cpp  GraphicsContext.h
Src/SimRobotCore2/Parser/: Element.cpp  Element.h  ElementCore2.cpp  ElementCore2.h  Parser.cpp  Parser.h  ParserCore2.cpp  ParserCore2.h
Src/SimRobotCore2/Platform/: OffscreenRenderer.cpp  OffscreenRenderer.h  OpenGL.h
Src/SimRobotCore2/Simulation/: Axis.cpp  Axis.h  Body.cpp  Body.h  Compound.cpp  Compound.h  GraphicalObject.cpp  GraphicalObject.h  PhysicalObject.cpp  PhysicalObject.h  Scene.cpp  Scene.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h  UserInput.h
Src/SimRobotCore2/Simulation/Actuators/: Actuator.cpp  Actuator.h  Hinge.cpp  Hinge.h  Joint.cpp  Joint.h  Slider.cpp  Slider.h
Src/SimRobotCore2/Simulation/Appearances/: Appearance.cpp  Appearance.h  BoxAppearance.cpp  BoxAppearance.h  CapsuleAppearance.cpp  CapsuleAppearance.h  ComplexAppearance.cpp  ComplexAppearance.h  CylinderAppearance.cpp  CylinderAppearance.h  SphereAppearance.cpp  SphereAppearance.h
Src/SimRobotCore2/Simulation/Geometries/: BoxGeometry.cpp  BoxGeometry.h  CapsuleGeometry.cpp  CapsuleGeometry.h  CylinderGeometry.cpp  CylinderGeometry.h  Geometry.cpp  Geometry.h  SphereGeometry.cpp  SphereGeometry.h  TorusGeometry.cpp  TorusGeometry.h
Src/SimRobotCore2/Simulation/Masses/: BoxMass.cpp  CapsuleMass.cpp  CylinderMass.cpp  CylinderMass.h  InertiaMatrixMass.cpp  InertiaMatrixMass.h  Mass.cpp  Mass.h  SphereMass.cpp  SphereMass.h
Src/SimRobotCore2/Simulation/Motors/: Motor.h  PT2Motor.cpp  PT2Motor.h  ServoMotor.cpp  ServoMotor.h  VelocityMotor.cpp  VelocityMotor.h
Src/SimRobotCore2/Simulation/Sensors/: Accelerometer.cpp  Accelerometer.h  ApproxDistanceSensor.cpp  ApproxDistanceSensor.h  Camera.cpp  Camera.h  CollisionSensor.cpp  CollisionSensor.h  DepthImageSensor.cpp  DepthImageSensor.h  Gyroscope.cpp  Gyroscope.h  ObjectSegmentedImageSensor.cpp  ObjectSegmentedImageSensor.h  Sensor.cpp  Sensor.h  SingleDistanceSensor.cpp  SingleDistanceSensor.h
Src/SimRobotCore2/Tools/: ODETools.h  OpenGLTools.cpp  OpenGLTools.h  Texture.cpp  Texture.h
Src/SimRobotCore2D/: CoreModule.cpp  CoreModule.h  SimObjectPainter.cpp  SimObjectPainter.h  SimObjectWidget.cpp  SimObjectWidget.h  SimRobotCore2D.h  SimRobotCore2D.qrc
Src/SimRobotCore2D/Parser/: Element.cpp  Element.h  ElementCore2D.cpp  ElementCore2D.h  Parser.cpp  Parser.h  ParserCore2D.cpp  ParserCore2D.h
Src/SimRobotCore2D/Simulation/: Body.cpp  Body.h  Compound.cpp  Compound.h  PhysicalObject.cpp  PhysicalObject.h  Scene.cpp  Scene.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h
Src/SimRobotCore2D/Simulation/Geometries/: ChainGeometry.cpp  ChainGeometry.h  ConvexGeometry.cpp  ConvexGeometry.h  DiskGeometry.cpp  DiskGeometry.h  EdgeGeometry.cpp  EdgeGeometry.h  Geometry.cpp  Geometry.h  RectGeometry.cpp  RectGeometry.h
Src/SimRobotCore2D/Simulation/Masses/: DiskMass.cpp  DiskMass.h  (+6 more)
Src/SimRobotCore2D/Tools/: QtTools.h
Src/SimRobotCore3/: ActuatorsWidget.cpp  ActuatorsWidget.h  CoreModule.cpp  SensorWidget.cpp  SensorWidget.h  SimObjectRenderer.cpp  SimObjectRenderer.h  SimObjectWidget.cpp  SimObjectWidget.h  SimRobotCore3.h  SimRobotCore3.qrc
Src/SimRobotCore3/Graphics/: GraphicsContext.h  Light.cpp  Light.h  Primitives.cpp
Src/SimRobotCore3/Parser/: ElementCore3.cpp  ElementCore3.h  ParserCore3.cpp  ParserCore3.h
Src/SimRobotCore3/Simulation/: Axis.h  Body.cpp  Body.h  Compound.cpp  Compound.h  GraphicalObject.cpp  GraphicalObject.h  PhysicalObject.cpp  PhysicalObject.h  Scene.cpp  Scene.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h  UserInput.cpp  UserInput.h
Src/SimRobotCore3/Tools/: OpenGLTools.cpp  OpenGLTools.h
Src/SimRobotEditor/: ._EditorWidget.h  EditorModule.cpp  EditorModule.h  EditorWidget.cpp  EditorWidget.h  SimRobotEditor.h  SimRobotEditor.qrc  SyntaxHighlighter.cpp  SyntaxHighlighter.h
Util/MuJoCo/Linux/: THIRD_PARTY_NOTICES
Util/MuJoCo/Windows/: THIRD_PARTY_NOTICES.txt
Util/MuJoCo/macOS/: THIRD_PARTY_NOTICES
Util/ode/: VERSION
Util/qt/macOS/: VERSION
Util/qt/macOSarm64/: VERSION
(+1098 files in other folders)
